import org.springframework.boot.gradle.plugin.SpringBootPlugin

plugins {
    id "checkstyle"
    id "jacoco"
    id "io.freefair.lombok"
    id "java-library"
    id "io.freefair.maven-optional"
    id "io.freefair.maven-publish-java"
}

description = "OkHttp Spring Boot AutoConfigure"

lombok {
    delombok {
        enabled = false
    }
    version = 'latest.release'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll(['-Xlint:all,-serial', '-parameters'])
    options.release.set(25) // javac --release 7..21 ~ libs.versions.jdk.get().toInteger()
}

compileJava { // tasks.named('compileJava')
    inputs.files(processResources)
}

tasks.named('jacocoTestReport', JacocoReport) {
    reports.xml.required = true
}

dependencies {
    api platform(SpringBootPlugin.BOM_COORDINATES)
    annotationProcessor platform(SpringBootPlugin.BOM_COORDINATES)

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.springframework.boot:spring-boot-autoconfigure-processor'

    api 'org.springframework.boot:spring-boot-autoconfigure'
    implementation 'org.slf4j:slf4j-api'
    api 'org.jspecify:jspecify'

    optional project(':okhttp-spring-client')
    optional 'org.springframework:spring-web'
    optional 'org.springframework.boot:spring-boot-starter-actuator'

    optional platform('com.squareup.okhttp3:okhttp-bom:5.+')
    optional 'com.squareup.okhttp3:okhttp'
    optional 'com.squareup.okhttp3:logging-interceptor'
    optional 'com.squareup.okhttp3:okhttp-zstd'
    optional('com.squareup.okhttp3:okhttp-brotli')

    testImplementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation('org.springframework.boot:spring-boot-starter-test'){
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation("org.junit-pioneer:junit-pioneer:latest.release")
}

tasks.named('test', Test) {
    useJUnitPlatform()
    jvmArgs = [
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "-Djdk.attach.allowAttachSelf=true",
            "-XX:+EnableDynamicAgentLoading"
    ]
}
